// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSinkData returns the expected array of SinkData objects for each input 1`] = `
Array [
  Object {
    "input": "query",
    "key": "query",
    "method": "get",
    "name": "rule",
    "params": Array [
      "input",
      "second_input",
    ],
    "sink": [MockFunction],
    "uri": "/query/rule",
    "url": "/rule/query/rule",
    "urlWithoutParams": "/rule/query/rule",
  },
  Object {
    "input": "params",
    "key": "params",
    "method": "get",
    "name": "rule",
    "params": Array [
      "input",
      "second_input",
    ],
    "sink": [MockFunction],
    "uri": "/params/rule/:input",
    "url": "/rule/params/rule/:input",
    "urlWithoutParams": "/rule/params/rule",
  },
  Object {
    "input": "body",
    "key": "body",
    "method": "post",
    "name": "rule",
    "params": Array [
      "input",
      "second_input",
    ],
    "sink": [MockFunction],
    "uri": "/body/rule",
    "url": "/rule/body/rule",
    "urlWithoutParams": "/rule/body/rule",
  },
]
`;

exports[`groupSinkData returns the expected grouped object 1`] = `
Object {
  "body": Array [
    Object {
      "input": "body",
      "key": "body",
      "method": "post",
      "name": "rule",
      "params": Array [
        "input",
        "second_input",
      ],
      "sink": [MockFunction],
      "uri": "/body/rule",
      "url": "/rule/body/rule",
      "urlWithoutParams": "/rule/body/rule",
    },
  ],
  "params": Array [
    Object {
      "input": "params",
      "key": "params",
      "method": "get",
      "name": "rule",
      "params": Array [
        "input",
        "second_input",
      ],
      "sink": [MockFunction],
      "uri": "/params/rule/:input",
      "url": "/rule/params/rule/:input",
      "urlWithoutParams": "/rule/params/rule",
    },
  ],
  "query": Array [
    Object {
      "input": "query",
      "key": "query",
      "method": "get",
      "name": "rule",
      "params": Array [
        "input",
        "second_input",
      ],
      "sink": [MockFunction],
      "uri": "/query/rule",
      "url": "/rule/query/rule",
      "urlWithoutParams": "/rule/query/rule",
    },
  ],
}
`;
